# CacheCloudNet

./: LICENSE  README  README.md  clean_output_tests.py  requirements.txt
notebooks/: balloon_placement.ipynb  voronoi_placement.ipynb
resources/: iot_project_world.sdf
resources/active_sensor/: active_sensor.sdf  test_world.sdf
resources/balloon/: balloon.sdf
resources/base_station/: base_station.sdf
resources/sensor/: sensor.sdf
resources/x3/: x3.sdf
src/output_tests/: 1727704342.2995157.json  1727705964.4815743.json  1727706477.2431974.json  1727706954.8045585.json  1727707271.4411051.json  1727707725.1721706.json  1727707961.6944773.json  1727708300.9986706.json  1727708759.394169.json  1727709074.1495318.json  1727709250.886882.json  1727709276.6042082.json  1727709573.7091866.json  1727773720.0769382.json  1727774349.525833.json  1727774604.8178341.json  1727774956.3716795.json  1727775547.4080176.json  1727775880.22409.json  1727776385.485711.json  1727777015.105574.json  1727782349.0012963.json  1727782618.250057.json  1727782739.7148545.json  1727783051.0836143.json  1727783404.1226788.json  1727783718.0954278.json  1727783871.8154173.json  (+3 more)
src/project_main/: package.xml  pytest.ini  setup.py
src/project_main/launch/: main.launch.py  managers.launch.py  robots.launch.py  simulation_launch.py
src/project_main/project_main/: balloon_controller.py  base_station_controller.py  cache_strategy.py  deployment_planner.py  dummy_sensor.py  movement_coordinator.py  sensor_controller.py  sensor_data.py  sim_utils.py  simulation_manager.py
(+36 files in other folders)
