<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_main</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ftrombetti@hotmail.it">fede3751</maintainer>
  <maintainer email="allegrini.1969146@studenti.uniroma1.it">EdoardoAllegrini</maintainer>
  <license>TODO: License declaration</license>

  <depend>python3-cachetools</depend>
  <depend>python3-numpy</depend>
  <depend>project_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
